--- a/views/events.html
+++ b/views/events.html
@@ -74,10 +74,45 @@
 
 	<!-- container -->
 	<div class="container">
+
+		<p class="title"><h4 style="color: #3d84e6"> <strong> 2016/2017 Academic Year </strong> </h4></p>
+	<hr>
+		<p> The 2016/2017 academic year opened on August 8, 2016.</p>
+
+		<div class="row flat">
+			<div class="col-lg-6 col-md-6 col-xs-6">
+				<ul class="plan plan4">
+					<li class="plan-name">August 2016 - December 2016 Semester
+					</li>
+					<li style="align: left;">
+					<td><strong> 07/08/2016 </strong></td>
+					<td>Arrival of Students</td>
+						 
+					</li>
+					<li>
+						<strong>08/08/2016</strong> Registration of students
+					</li>
+					<li>
+						<strong>09/08/2016</strong> Registration of students
+					</li>
+					<li>
+						<strong>10/08/2016</strong> Registration of students
+					</li>
+					<li>
+						<strong>11/08/2016</strong> Orientation of Generic students
+					</li>
+					<li>
+						<strong>12/08/2016</strong> Orientation of Generic students
+					</li>
+					
+				</ul>
+			</div>
+		</div>
+
 		<div class="row">
 			<!-- Article content -->
 			<section class="col-sm-12 maincontent">
-				<h3>Content coming soon</h3>
+
 				<p>
 
 				</p>
