--- a/views/gallery.html
+++ b/views/gallery.html
@@ -81,17 +81,24 @@
 					<br />
 					<br />
 					<p>
-						Nkhoma University Image  Gallery
+						<div class="box">
+                            <p class="title"><h4 style="color: #3d84e6"> <strong> Nkhoma University Image  Gallery </strong> </h4></p>
+                            <figure><img src="../assets/images/hr.gif" ></figure>
+                            
+                        </div>
+
+						
 					<br />
 						<br />
 					</p>
-
 
 					<div class="row">
 						<nav id="filter" class="col-md-12 text-center">
 							<ul>
 								<li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
-								<li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Students</a></li>
+								<li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">University Launch</a></li>
+								<li><a href="#" class="btn-theme btn-small" data-filter=".photography">Students</a></li>
+								<li><a href="#" class="btn-theme btn-small" data-filter=".print">Staff</a></li>
 							</ul>
 						</nav>
 						<div class="col-md-12">
@@ -100,64 +107,23 @@
 
 									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
+											<img src="../assets/images/gallery/launch1.JPG" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="../assets/images/IMG_1190.JPG" class="fancybox">
+													<a href="../assets/images/gallery/launch1.JPG" class="fancybox">
 														<h5>University Launch</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
 										</div>
 									</article>
-
-									<article class="col-sm-4 isotopeItem photography">
+									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
+											<img src="../assets/images/gallery/launch2.JPG" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="../assets/images/portfolio/img2.jpg" class="fancybox">
+													<a href="../assets/images/gallery/launch2.JPG" class="fancybox">
 														<h5>University Launch</h5>
-														<i class="fa fa-link fa-2x"></i></a>
-												</div>
-											</div>
-										</div>
-									</article>
-
-
-									<article class="col-sm-4 isotopeItem photography">
-										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
-											<div class="portfolio-desc align-center">
-												<div class="folio-info">
-													<a href="../assets/images/portfolio/img3.jpg" class="fancybox">
-														<h5>University Launch</h5>
-														<i class="fa fa-link fa-2x"></i></a>
-												</div>
-											</div>
-										</div>
-									</article>
-
-									<article class="col-sm-4 isotopeItem print">
-										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
-											<div class="portfolio-desc align-center">
-												<div class="folio-info">
-													<a href="../assets/images/portfolio/img4.jpg" class="fancybox">
-														<h5>Project Title</h5>
-														<i class="fa fa-link fa-2x"></i></a>
-												</div>
-											</div>
-										</div>
-									</article>
-
-									<article class="col-sm-4 isotopeItem photography">
-										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
-											<div class="portfolio-desc align-center">
-												<div class="folio-info">
-													<a href="../assets/images/portfolio/img5.jpg" class="fancybox">
-														<h5>Project Title</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -166,24 +132,37 @@
 
 									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
+											<img src="../assets/images/gallery/launch3.JPG" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="../assets/images/portfolio/img6.jpg" class="fancybox">
-														<h5>Project Title</h5>
+													<a href="../assets/images/gallery/launch3.JPG" class="fancybox">
+														<h5>University Launch</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
 										</div>
 									</article>
 
-									<article class="col-sm-4 isotopeItem print">
+									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
+											<img src="../assets/images/gallery/launch9.JPG" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="../assets/images/portfolio/img7.jpg" class="fancybox">
-														<h5>Project Title</h5>
+													<a href="../assets/images/gallery/launch9.JPG" class="fancybox">
+														<h5>University Launch</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem webdesign">
+										<div class="portfolio-item">
+											<img src="../assets/images/gallery/launch10.JPG" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="../assets/images/gallery/launch10.JPG" class="fancybox">
+														<h5>University Launch</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -192,11 +171,64 @@
 
 									<article class="col-sm-4 isotopeItem photography">
 										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
+											<img src="../assets/images/gallery/launch4.JPG" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="../assets/images/portfolio/img8.jpg" class="fancybox">
-														<h5>Project Title</h5>
+													<a href="../assets/images/gallery/launch4.JPG" class="fancybox">
+														<h5>Nkhuni students</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="../assets/images/gallery/launch5.JPG" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="../assets/images/gallery/launch5.JPG" class="fancybox">
+														<h5>Nkhuni students</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="../assets/images/gallery/launch6.JPG" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="../assets/images/gallery/launch6.JPG" class="fancybox">
+														<h5>Nkhuni students</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="../assets/images/gallery/launch7.JPG" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="../assets/images/gallery/launch7.JPG" class="fancybox">
+														<h5>Nkhuni students</h5>
+														<i class="fa fa-link fa-2x"></i></a>
+												</div>
+											</div>
+										</div>
+									</article>
+
+									<article class="col-sm-4 isotopeItem photography">
+										<div class="portfolio-item">
+											<img src="../assets/images/gallery/launch11.JPG" alt="" />
+											<div class="portfolio-desc align-center">
+												<div class="folio-info">
+													<a href="../assets/images/gallery/launch11.JPG" class="fancybox">
+														<h5>Nkhuni students</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -205,16 +237,17 @@
 
 									<article class="col-sm-4 isotopeItem print">
 										<div class="portfolio-item">
-											<img src="../assets/images/IMG_1190.JPG" alt="" />
+											<img src="../assets/images/gallery/launch8.JPG" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="../assets/images/portfolio/img9.jpg" class="fancybox">
-														<h5>Project Title</h5>
+													<a href="../assets/images/gallery/launch8.JPG" class="fancybox">
+														<h5>Staff</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
 										</div>
 									</article>
+
 								</div>
 
 							</div>
@@ -407,7 +440,7 @@
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	<script src="../assets/javascripts/jquery.cslider.js"></script>
 	<script src="../assets/javascripts/jquery.isotope.min.js"></script>
-	<script src="../assets/javascripts/jquery.fancybox.pack.js" type="text/javascript"></script>
+	<script src="../assets/javascripts/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
 	<script src="../assets/javascripts/custom.js"></script>
 </body>
 </html>
