--- a/views/gallery.html
+++ b/views/gallery.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="../assets/stylesheets/font-awesome.min.css">
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="../assets/stylesheets/bootstrap-theme.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="../assets/stylesheets/isotope.css" media="screen" />
+	<link rel="stylesheet" href="../assets/stylesheets/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="../assets/stylesheets/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
