changed imange alt in couses

--- a/views/courses.html
+++ b/views/courses.html
@@ -104,28 +104,28 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <ul class="list-unstyled video-list-thumbs row">
 	<li class="col-lg-3 col-sm-4 col-xs-6">
 		<a href="#" title="Commerce">
-			<img src="../assets/images/faculties/accounting1.jpg" alt="Barca" width="300px" height="130px" />
+			<img src="../assets/images/faculties/accounting1.jpg" alt="Commerce" width="300px" height="130px" />
 			<h2>Commerce</h2>
 
 		</a>
 	</li>
 	<li class="col-lg-3 col-sm-4 col-xs-6">
 		<a href="#" title="Education">
-			<img src="../assets/images/faculties/career.jpg" alt="Barca"  width="300px" height="130px" />
+			<img src="../assets/images/faculties/career.jpg" alt="Education Career"  width="300px" height="130px" />
 			<h2>Education</h2>
 
 		</a>
 	</li>
 	<li class="col-lg-3 col-sm-4 col-xs-6">
 		<a href="#" title="Nursing">
-			<img src="../assets/images/faculties/nursing_lab.jpg" alt="Barca"  width="300px" height="130px" />
+			<img src="../assets/images/faculties/nursing_lab.jpg" alt="Nursing Lab"  width="300px" height="130px" />
 			<h2>Nursing</h2>
 
 		</a>
 	</li>
 	<li class="col-lg-3 col-md-4 col-sm-4 col-xs-6">
 		<a href="#" title="Theology">
-			<img src="../assets/images/faculties/bible.jpeg" alt="Barca"  width="300px" height="130px"/>
+			<img src="../assets/images/faculties/bible.jpeg" alt="Bible"  width="300px" height="130px"/>
 			<h2>Theology</h2>
 
 		</a>
