--- a/views/courses.html
+++ b/views/courses.html
@@ -71,7 +71,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav pull-right mainNav">
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li class="active"><a href="courses.html">Courses</a></li>
           <li><a href="events.html">Events and Dates</a></li>
