--- a/views/about.html
+++ b/views/about.html
@@ -118,7 +118,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li><a href="">University Launch</a><br>
                             <span class="small text-muted">Nkhoma University, of Nkhoma Synod of the Church of Central African Presbyterian (CCAP), was officially launched on 3rd October in Lilongwe.</span></li>
                         <li><a href="">Downloads</a><br>
-                            <span class="small text-muted">No downloads at the moment</span></li>
+                            <span class="small text-muted"> <a href="../assets/Docs/DOC-20161207-WA0001.pdf" download="Nkhuni Application Form">  APPLICATION FORM FOR STUDENTS ENROLMENT </a></span>
+                            <span class="small text-muted"> <a href="../assets/Docs/DOC-20161207-WA0002.pdf" download="2016/2017 Academic Year January 2017 Enrolment"> 2016/2017 Academic Year January 2017 Enrolment</a> </span>
+
+                            </li>
 
                     </ul>
                 </div>
