updated about us

--- a/views/about.html
+++ b/views/about.html
@@ -114,7 +114,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <h4>Latest News</h4>
                     <ul class="list-unstyled list-spaces">
                         <li><a href="">2016/2017 intake</a><br>
-                            <span class="small text-muted">University New Intake</span></li>
+                            <span class="small text-muted">The University is currently inviting interested and suitably qualified persons to its entrance examinations for the Semester that will commence on 1 st February 2017 as follows: <br>
+                            <h5> <strong> Date of Entrance Exams: </strong> </h5>
+                            <strong>  Date: </strong> Tuesday, 6 th December, 2016 <br>
+                            <strong>  Time: </strong> 9:00 am to 1:00 pm <br>
+                            <strong>  Venue: </strong> Lilongwe CCAP Campus
+                            </span>
+                            <br> <br>
+                            <span class="small text-muted">
+                            Interested candidates should bring the following items to the entrance exams: <br>
+                            1. A copy of MSCE Certificate or notification of Results or its equivalent <br>
+                            2. Two passport size photos (colour) <br>
+                            3. MK5000 Application fee (non-refundable) <br>
+                            4. Reference letter from church pastor/leadership to <br>
+                            </span>
+                          </li>
                         <li><a href="">University Launch</a><br>
                             <span class="small text-muted">Nkhoma University, of Nkhoma Synod of the Church of Central African Presbyterian (CCAP), was officially launched on 3rd October in Lilongwe.</span></li>
                         <li><a href="">Downloads</a><br>
